--- a/OrderRequestQueueProcessor/OrderRequestQueueProcessor/OrderRequestQueueProcessor.csproj
+++ b/OrderRequestQueueProcessor/OrderRequestQueueProcessor/OrderRequestQueueProcessor.csproj
@@ -20,9 +20,20 @@
     <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+  
+    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="6.5.0" />
+      <PackageReference Include="System.Security.Permissions" Version="7.0.0" />
+      <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="AppSettings.Test.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="AppSettings.Development.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="AppSettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
